<resources>
    <string name="DEBUG_MVC_ID">CS349_DEBUG_MVC2</string>
    <string name="app_name">A4</string>
    <string name="start_game">Start</string>
    <string name="setting_game">Setting</string>
    <string name="text_buttons">Buttons: </string>
    <string name="text_difficulties">Difficulty: </string>
    <string name="game_score">SCORE</string>
    <string name="game_message">MESSAGE</string>
    <string name="back_welcome_page">BACK</string>
    <string name="game_name">Simon Game</string>
    <string name="instructions">Click START to start the exicted Simon game.\n Click SETTING to set Number of buttons and Difficulty\n
    When the game starts, you will be given a random sequence of buttons, follow it to win! </string>
</resources>
